<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:contentDescription="@string/home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_movies"
        android:contentDescription="@string/movies"
        android:icon="@drawable/ic_movie_white_24dp"
        android:title="@string/movies" />

    <item
        android:id="@+id/nav_tvShow"
        android:contentDescription="@string/tv_shows"
        android:icon="@drawable/ic_live_tv_white_24dp"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/nav_actor"
        android:contentDescription="@string/actors"
        android:icon="@drawable/ic_recent_actors_white_24dp"
        android:title="@string/actors" />

</menu>