<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".uiandvm.home.HomeFragment">


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_greeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="normal" />


                <RelativeLayout
                    android:id="@+id/cv_home_menus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_greeting"
                    android:layout_marginTop="8dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/trending"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/red"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/red"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageButton
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/ic_trending_up_black_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="4dp"
                                android:fontFamily="sans-serif-smallcaps"
                                android:text="@string/trending_now"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/genre"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trending"
                        android:layout_margin="4dp"
                        app:cardBackgroundColor="@color/green"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/green"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageButton
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/ic_format_list_bulleted_black_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="4dp"
                                android:fontFamily="sans-serif-smallcaps"
                                android:text="@string/genres"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/playing"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_toEndOf="@+id/trending"
                        android:backgroundTint="@color/blue"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/blue"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageButton
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/ic_play_circle_outline_white_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="4dp"
                                android:fontFamily="sans-serif-smallcaps"
                                android:text="@string/playing_now"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/playing"
                        android:layout_margin="4dp"
                        android:layout_toEndOf="@+id/genre"
                        android:backgroundTint="@color/yellow"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/yellow"
                            android:orientation="horizontal"
                            android:padding="8dp">

                            <ImageButton
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/ic_star_border_white_24dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="4dp"
                                android:fontFamily="sans-serif-smallcaps"
                                android:text="@string/top_rated"
                                android:textColor="@android:color/white"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_title_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_home_menus"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/upcoming_movies"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progresBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title_upcoming"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming_movies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_title_upcoming"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    tools:listitem="@layout/item_upcoming_movies"/>

                <TextView
                    android:id="@+id/tv_title_upcoming_tvshows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rv_upcoming_movies"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/upcoming_tv_show"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progresBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title_upcoming_tvshows"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="16dp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_upcoming_tvShows"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_title_upcoming_tvshows"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    tools:listitem="@layout/item_upcoming_tvshow"/>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>